added filter by cathegories

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         <article>
             <h2>Paris</h2>
             <img src="paris.jpeg" alt="Tour Eiffel">
-            <p>Découvrez la ville lumière et ses merveilles.</p>
+            <p>Découvrez la ville des lumières et ses merveilles.</p>
             <button>En savoir plus</button>
         </article>
         <article>
@@ -85,7 +85,7 @@
         </div>
     </footer>
     <script type="module" src="/js/auth.js"></script>
-    <script type="module" src="/js/destinations.js"></script>
     <script type="module" src="/js/favorites.js"></script>
+    <script type="module" src="/js/destinations.js"></script>
 </body>
 </html>
