--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,37 +3,32 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Signup — Voyage Évasion</title>
+  <title>Login — Voyage Évasion</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <main class="auth-page">
-    <h1>Create an account</h1>
-    <form id="signup-form">
-      <label>
-        Username
-        <input type="text" name="username" id="username" required />
-      </label>
+    <h1>Log in</h1>
+    <form id="login-form">
       <label>
         Email
         <input type="email" name="email" id="email" required />
       </label>
       <label>
         Password
-        <input type="password" name="password" id="password" required minlength="6" />
+        <input type="password" name="password" id="password" required />
       </label>
-      <button type="submit">Sign up</button>
+      <button type="submit">Log in</button>
     </form>
 
-    <p>Already have an account? <a href="/login.html">Log in</a></p>
+    <p>Don't have an account? <a href="/html/signup.html">Sign up</a></p>
 
     <div id="msg" aria-live="polite"></div>
   </main>
 
   <script type="module" src="/js/auth.js"></script>
   <script>
-    // initialize form mode
-    document.getElementById('signup-form').dataset.mode = 'signup';
+    document.getElementById('login-form').dataset.mode = 'login';
   </script>
 </body>
 </html>
