Add admin role system with full destination management, fix favorites user filtering, and improve UI consistency

--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -15,6 +15,7 @@
                 <li><a href="/html/destinations.html">DESTINATIONS</a></li>
                
                 <li><a href="/html/contact.html" class="active">CONTACT</a></li>
+                <li id="admin-nav-link" style="display:none;"><a href="/html/admin.html">ADMIN</a></li>
                 <li class="auth-links" id="auth-links"></li>
             </ul>
         </nav>
