--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
                 <li><a href="/index.html" class="active">ACCUEIL</a></li>
                 <li><a href="/html/destinations.html">DESTINATIONS</a></li>
                 <li><a href="/html/contact.html">CONTACT</a></li>
+                <li id="admin-nav-link" style="display:none;"><a href="/html/admin.html">ADMIN</a></li>
                 <li class="auth-links" id="auth-links"></li>
             </ul>
         </nav>
