--- a/public/html/destinations.html
+++ b/public/html/destinations.html
@@ -14,6 +14,7 @@
                 <li><a href="/html/destinations.html" class="active">DESTINATIONS</a></li>
                
                 <li><a href="/html/contact.html">CONTACT</a></li>
+                <li id="admin-nav-link" style="display:none;"><a href="/html/admin.html">ADMIN</a></li>
                 <!-- auth links updated dynamically by /js/auth.js -->
                 <li class="auth-links" id="auth-links"></li>
             </ul>
