Add destination details modal; remove price/rating from cards; align categories; extend schema (country/price/rating); modal styling tweaks

--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -52,11 +52,13 @@
           <label for="category">Category *</label>
           <select id="category" required>
             <option value="">Select category...</option>
-            <option value="beach">Beach</option>
-            <option value="mountain">Mountain</option>
-            <option value="city">City</option>
-            <option value="adventure">Adventure</option>
-            <option value="cultural">Cultural</option>
+            <option value="Aventure">Aventure</option>
+            <option value="Famille">Famille</option>
+            <option value="Plage">Plage</option>
+            <option value="Montagne">Montagne</option>
+            <option value="Culture">Culture</option>
+            <option value="Histoire">Histoire</option>
+            <option value="Bien-être">Bien-être</option>
           </select>
         </div>
 
