--- a/public/html/destinations.html
+++ b/public/html/destinations.html
@@ -77,6 +77,38 @@
         </article>
     </section>
 
+    <!-- Modal for destination details -->
+    <div id="destinationModal" class="modal">
+      <div class="modal-content">
+        <span class="modal-close">&times;</span>
+        <div class="modal-body">
+          <img id="modal-image" src="" alt="">
+          <h2 id="modal-name"></h2>
+          <p id="modal-country" class="modal-country"></p>
+          <p id="modal-description" class="modal-description"></p>
+          <div class="modal-info">
+            <div class="modal-info-item">
+              <strong>Prix:</strong>
+              <span id="modal-price" class="modal-price"></span>
+            </div>
+            <div class="modal-info-item">
+              <strong>Note:</strong>
+              <span id="modal-rating" class="modal-rating"></span>
+            </div>
+            <div class="modal-info-item">
+              <strong>Catégorie:</strong>
+              <span id="modal-category"></span>
+            </div>
+          </div>
+          <div class="modal-contact">
+            <h3>Contactez notre agence</h3>
+            <p><strong>📞 Téléphone:</strong> +33 1 23 45 67 89</p>
+            <p><strong>📧 Email:</strong> contact@voyage-evasion.fr</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer>
         <p>&copy; 2024 Voyage Évasion. Tous droits réservés.</p>
         <div class="social-icons">
