Fix homepage icons: Replace broken image paths with emoji icons

--- a/public/html/destinations.html
+++ b/public/html/destinations.html
@@ -25,20 +25,21 @@
         <h2>Offres Spéciales : -30% sur les séjours d'hiver !</h2>
     </section>
 
-    <aside class="sidebar"> 
-        <h2>Catégories</h2>
-        <ul>
-            <li><a href="#">Aventure</a></li>
-            <li><a href="#">Famille</a></li>
-            <li><a href="#">Plage</a></li>
-            <li><a href="#">Montagne</a></li>
-            <li><a href="#">Culture</a></li> 
-            <li><a href="#">Histoire</a></li> 
-            <li><a href="#">Bien-être</a></li> 
-        </ul>
-    </aside>
+    <div class="page-container">
+        <aside class="sidebar"> 
+            <h2>Catégories</h2>
+            <ul>
+                <li><a href="#">Aventure</a></li>
+                <li><a href="#">Famille</a></li>
+                <li><a href="#">Plage</a></li>
+                <li><a href="#">Montagne</a></li>
+                <li><a href="#">Culture</a></li> 
+                <li><a href="#">Histoire</a></li> 
+                <li><a href="#">Bien-être</a></li> 
+            </ul>
+        </aside>
 
-    <section class="main-content">
+        <section class="main-content">
         <article>
             <h2>Paris</h2>
             <img src="/img/paris.jpeg" alt="Tour Eiffel">
@@ -76,6 +77,7 @@
             <button>En savoir plus</button>
         </article>
     </section>
+    </div>
 
     <!-- Modal for destination details -->
     <div id="destinationModal" class="modal">
