--- a/public/index.html
+++ b/public/index.html
@@ -57,17 +57,17 @@
         <h2>Pourquoi Nous Choisir?</h2>
         <div class="features">
             <div class="feature">
-                <img src="path/to/icon1.png" alt="Icone 1">
+                <div class="feature-icon">🌍</div>
                 <h3>Destinations de Rêve</h3>
                 <p>Des lieux sélectionnés avec soin pour une expérience unique.</p>
             </div>
             <div class="feature">
-                <img src="path/to/icon2.png" alt="Icone 2">
+                <div class="feature-icon">💬</div>
                 <h3>Service Client 24/7</h3>
                 <p>Notre équipe est à votre écoute à tout moment.</p>
             </div>
             <div class="feature">
-                <img src="path/to/icon3.png" alt="Icone 3">
+                <div class="feature-icon">💰</div>
                 <h3>Meilleurs Prix Garantis</h3>
                 <p>Nous vous offrons les tarifs les plus compétitifs.</p>
             </div>
