Add AI chatbot with user-specific history, Gemini & Expedia integration

--- a/public/html/destinations.html
+++ b/public/html/destinations.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Voyage Évasion</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/css/chatbot.css">
 </head>
 <body>
     <header>
@@ -122,5 +123,6 @@
     <script type="module" src="/js/auth.js"></script>
     <script type="module" src="/js/favorites.js"></script>
     <script type="module" src="/js/destinations.js"></script>
+    <script src="/js/chatbot.js"></script>
 </body>
 </html>
