--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -6,6 +6,7 @@
     <title>Mon Profil - Voyage Évasion</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/css/chatbot.css">
 </head>
 <body>
     <header>
@@ -46,9 +47,15 @@
         <section class="chatbot-section">
             <div class="chatbot-placeholder">
                 <div class="chatbot-icon">💬</div>
-                <h3>Assistant de Voyage</h3>
-                <p>Notre chatbot intelligent sera bientôt disponible pour vous aider à planifier votre voyage parfait!</p>
-                <button class="chatbot-coming-soon" disabled>Bientôt Disponible</button>
+                <h3>Assistant de Voyage Intelligent</h3>
+                <p>Notre chatbot intelligent propulsé par l'IA est maintenant disponible! Cliquez sur l'icône de chat en bas à droite pour commencer.</p>
+                <p style="font-size: 14px; margin-top: 15px;">
+                    <strong>Fonctionnalités:</strong><br>
+                    ✓ Recherche d'hôtels sur Expedia<br>
+                    ✓ Suggestions de destinations personnalisées<br>
+                    ✓ Planification de voyage<br>
+                    ✓ Réponses instantanées à vos questions
+                </p>
             </div>
         </section>
     </div>
@@ -59,5 +66,6 @@
 
     <script type="module" src="/js/auth.js"></script>
     <script type="module" src="/js/profile.js"></script>
+    <script src="/js/chatbot.js"></script>
 </body>
 </html>
