--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Voyage Évasion - Accueil</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/chatbot.css">
 </head>
 <body>
     <header>
@@ -92,7 +93,8 @@
         </div>
     </footer>
 
-    <script type="module" src="/js/auth.js"></script>
-    <script type="module" src="/js/index.js"></script>
+    <script type="module" src="js/auth.js"></script>
+    <script type="module" src="js/index.js"></script>
+    <script src="js/chatbot.js"></script>
 </body>
 </html>
