--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -5,6 +5,7 @@
     <title>Contactez-Nous - Voyage Évasion</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="/css/chatbot.css">
 </head>
 <body>
     <header>
@@ -68,5 +69,6 @@
 
     <script type="module" src="/js/auth.js"></script>
     <script type="module" src="/js/contact.js"></script>
+    <script src="/js/chatbot.js"></script>
 </body>
 </html>
