--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,9 @@
     <footer>
         <p>&copy; 2024 Voyage Évasion. Tous droits réservés.</p>
         <div class="social-icons">
-            <img src="/img/facebook.png" alt="Facebook">
+            <a href="https://www.facebook.com/yassin.abid.31" target="_blank" rel="noopener noreferrer">
+                <img src="/img/facebook.png" alt="Facebook">
+            </a>
             <img src="/img/rss.png" alt="RSS">
             <img src="/img/twitter.png" alt="Twitter">
         </div>
