Implement Trip Planner feature, update navigation with 'New' badge, and fix destinations page styling

--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -6,6 +6,7 @@
   <title>Admin Panel - Voyage Evasion</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="/css/admin.css">
+  <link rel="stylesheet" href="/css/nav-badge.css">
   <script>
     // Immediate admin check - runs before page content renders
     (function() {
@@ -40,6 +41,7 @@
       <ul>
         <li><a href="/index.html">ACCUEIL</a></li>
         <li><a href="/html/destinations.html">DESTINATIONS</a></li>
+        <li><a href="/html/trip-planner.html" class="nav-link-new">PLANIFICATEUR <span class="nav-badge">New</span></a></li>
         <li><a href="/html/contact.html">CONTACT</a></li>
         <li><a href="/html/admin.html" class="active">ADMIN</a></li>
         <li class="auth-links" id="auth-links"></li>
