--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Contactez-Nous - Voyage Évasion</title>
     <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/css/contact.css">
-    <link rel="stylesheet" href="/css/chatbot.css">
+    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../css/chatbot.css">
+    <link rel="stylesheet" href="../css/nav-badge.css">
 </head>
 <body>
     <header>
@@ -13,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html">ACCUEIL</a></li>
-                <li><a href="/html/destinations.html">DESTINATIONS</a></li>
-               
-                <li><a href="/html/contact.html" class="active">CONTACT</a></li>
+                <li><a href="destinations.html">DESTINATIONS</a></li>
+                <li><a href="trip-planner.html" class="nav-link-new">PLANIFICATEUR <span class="nav-badge">New</span></a></li>
+                <li><a href="contact.html" class="active">CONTACT</a></li>
                 <li id="admin-nav-link" style="display:none;"><a href="/html/admin.html">ADMIN</a></li>
                 <li class="auth-links" id="auth-links"></li>
             </ul>
