--- a/public/html/destinations.html
+++ b/public/html/destinations.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Voyage Évasion</title>
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/css/chatbot.css">
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/destinations.css">
+    <link rel="stylesheet" href="../css/chatbot.css">
+    <link rel="stylesheet" href="../css/nav-badge.css">
 </head>
 <body>
     <header>
@@ -12,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html">ACCUEIL</a></li>
-                <li><a href="/html/destinations.html" class="active">DESTINATIONS</a></li>
-               
-                <li><a href="/html/contact.html">CONTACT</a></li>
+                <li><a href="destinations.html" class="active">DESTINATIONS</a></li>
+                <li><a href="trip-planner.html" class="nav-link-new">PLANIFICATEUR <span class="nav-badge">New</span></a></li>
+                <li><a href="contact.html">CONTACT</a></li>
                 <li id="admin-nav-link" style="display:none;"><a href="/html/admin.html">ADMIN</a></li>
                 <!-- auth links updated dynamically by /js/auth.js -->
                 <li class="auth-links" id="auth-links"></li>
