--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/chatbot.css">
+    <link rel="stylesheet" href="css/nav-badge.css">
 </head>
 <body>
     <header>
@@ -14,6 +15,7 @@
             <ul>
                 <li><a href="/index.html" class="active">ACCUEIL</a></li>
                 <li><a href="/html/destinations.html">DESTINATIONS</a></li>
+                <li><a href="/html/trip-planner.html" class="nav-link-new">PLANIFICATEUR <span class="nav-badge">New</span></a></li>
                 <li><a href="/html/contact.html">CONTACT</a></li>
                 <li id="admin-nav-link" style="display:none;"><a href="/html/admin.html">ADMIN</a></li>
                 <li class="auth-links" id="auth-links"></li>
@@ -51,6 +53,14 @@
                 <p>Plongez dans la culture unique et vibrante du Japon.</p>
                 <button>En savoir plus</button>
             </article>
+        </div>
+    </section>
+
+    <section class="trip-planner-promo">
+        <div class="promo-content">
+            <h2>Planifiez Votre Voyage de Rêve</h2>
+            <p>Utilisez notre planificateur intelligent alimenté par l'IA pour créer un itinéraire sur mesure en quelques secondes. Dites-nous simplement où vous voulez aller !</p>
+            <a href="/html/trip-planner.html" class="cta-button promo-btn">Commencer Maintenant</a>
         </div>
     </section>
 
