--- a/public/html/trip-planner.html
+++ b/public/html/trip-planner.html
@@ -34,9 +34,15 @@
             <!-- Form Section -->
             <section class="planner-form-section" id="form-section">
                 <form id="trip-form" class="trip-form">
-                    <div class="form-group">
-                        <label for="destination">Destination</label>
-                        <input type="text" id="destination" name="destination" placeholder="ex: Paris, Japon, Bali..." required>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="departure">Ville de départ</label>
+                            <input type="text" id="departure" name="departure" placeholder="ex: Lyon, Paris, Londres..." required>
+                        </div>
+                        <div class="form-group">
+                            <label for="destination">Destination</label>
+                            <input type="text" id="destination" name="destination" placeholder="ex: Paris, Japon, Bali..." required>
+                        </div>
                     </div>
 
                     <div class="form-row">
