Implement Google Authentication and update Navbar styling

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -21,6 +21,15 @@
       <button type="submit">Log in</button>
     </form>
 
+    <div style="text-align: center; margin: 20px 0;">
+      <span style="color: #666;">OR</span>
+    </div>
+
+    <a href="/api/auth/google" class="google-btn" style="display: flex; align-items: center; justify-content: center; background: white; color: #333; border: 1px solid #ddd; padding: 10px; border-radius: 5px; text-decoration: none; font-weight: bold; transition: background 0.3s;">
+      <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google" style="width: 20px; margin-right: 10px;">
+      Sign in with Google
+    </a>
+
     <p>Don't have an account? <a href="/html/signup.html">Sign up</a></p>
 
     <div id="msg" aria-live="polite"></div>
