Fix script paths to be absolute for Vercel routing

--- a/public/index.html
+++ b/public/index.html
@@ -105,8 +105,8 @@
         </div>
     </footer>
 
-    <script type="module" src="js/auth.js"></script>
-    <script type="module" src="js/index.js"></script>
-    <script src="js/chatbot.js"></script>
+    <script type="module" src="/js/auth.js"></script>
+    <script type="module" src="/js/index.js"></script>
+    <script src="/js/chatbot.js"></script>
 </body>
 </html>
